# snapshow

./: .gitignore  LICENSE  README.md  custom_setup.yaml  pyproject.toml  requirements.txt  verify_logging.py
.github/workflows/: publish.yml
docs/: CONVENTIONS.md
docs/superpowers/plans/: 2026-04-03-snapshow-systematic-refactor.md  2026-04-04-readme-revamp.md  2026-04-04-snapshow-friendly-subtitle-splitter.md  2026-04-04-snapshow-logic-and-tui-fix.md  2026-04-04-snapshow-punctuation-clean-splitter.md  2026-04-04-snapshow-voice-retry-backoff.md  2026-04-05-snapshow-log-hardening.md  2026-04-05-snapshow-orientation-aware-splitting.md  2026-04-05-snapshow-repositioning-readme.md  2026-04-05-snapshow-right-click-preview.md  2026-04-05-snapshow-title-multiline-rendering.md  2026-04-05-snapshow-tui-image-preview.md  2026-04-05-snapshow-tui-modernization.md
docs/superpowers/specs/: 2026-04-03-snapshow-systematic-refactor-design.md  2026-04-04-snapshow-friendly-subtitle-splitter-design.md  2026-04-04-snapshow-logic-and-tui-fix-design.md  2026-04-04-snapshow-punctuation-first-clean-splitter-design.md  2026-04-04-snapshow-voice-retry-backoff-design.md  2026-04-05-snapshow-orientation-aware-splitting-design.md  2026-04-05-snapshow-repositioning-design.md  2026-04-05-snapshow-title-multiline-rendering-design.md  2026-04-05-snapshow-tui-image-preview-design.md
examples/: demo.yaml  project_tui.yaml  run_example.sh
img2vid/: __main__.py  cli.py  config.py  timeline.py  tui.py  video.py  voice.py
snapshow/: __init__.py  __main__.py  cli.py  config.py  timeline.py  tui.py  user_config.py  utils.py  video.py  voice.py
tests/: test_config.py  test_timeline.py  test_user_config.py  test_utils.py  test_video.py  test_voice.py
