[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snapshow"
version = "0.1.0"
description = "多张图片幻灯片加配音生成短视频"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "edge-tts>=6.1.0",
    "click>=8.0",
    "pillow>=10.0",
    "textual>=0.50.0",
]

[project.scripts]
snapshow = "snapshow.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
