[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snapshow"
description = "多张图片幻灯片加配音生成短视频 (专业的图文成片交付引擎)"
readme = "README.md"
dynamic = ["version"]
authors = [
    { name = "Snapshow Contributors" },
]
license = "MIT"
requires-python = ">=3.10"
keywords = ["video", "slideshow", "tts", "edge-tts", "subtitle", "ffmpeg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "pyyaml>=6.0",
    "edge-tts>=6.1.0",
    "click>=8.0",
    "pillow>=10.0",
    "textual>=0.50.0",
    "jieba>=0.42.1",
]

[tool.setuptools_scm]
# 启用 setuptools_scm 自动发现

[tool.setuptools.packages.find]
include = ["snapshow*"]
exclude = ["tests*", "docs*", "examples*", "output*"]

[project.urls]
Homepage = "https://github.com/mangege/snapshow"
Repository = "https://github.com/mangege/snapshow"
Issues = "https://github.com/mangege/snapshow/issues"

[project.scripts]
snapshow = "snapshow.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
